# rttrpcpp

./: CMakeLists.txt  LICENSE  README.md
include/rttrpcpp/: RTTrP.h  RTTrPHeader.h  RTTrPM.h
include/rttrpcpp/core/: Logging.h  Serializable.h  Vector3.h  Vector4.h
include/rttrpcpp/modules/: LocationModule.h  Module.h  ModuleFactory.h  OrientationModule.h
include/rttrpcpp/modules/centroid/: Centroid.h  CentroidPos.h  CentroidPosAccVel.h
include/rttrpcpp/modules/orientation/: OrientationEuler.h  OrientationQuaternion.h
include/rttrpcpp/modules/trackedpoint/: TrackedPoint.h  TrackedPointPos.h  TrackedPointPosAccVel.h
include/rttrpcpp/modules/zone/: ZoneCollision.h
include/rttrpcpp/trackables/: Trackable.h  TrackableDefault.h  TrackableFactory.h
src/: RTTrPHeader.cpp  RTTrPM.cpp
src/modules/: Module.cpp  ModuleFactory.cpp
src/modules/centroid/: CentroidPos.cpp  CentroidPosAccVel.cpp
src/modules/orientation/: OrientationEuler.cpp  OrientationQuaternion.cpp
src/modules/trackedpoint/: TrackedPointPos.cpp  TrackedPointPosAccVel.cpp
src/modules/zone/: ZoneCollision.cpp
src/trackables/: Trackable.cpp  TrackableDefault.cpp  TrackableFactory.cpp
tests/: CMakeLists.txt  RTTrPCppTest.cpp
tests/include/: RTTrPHeaderTest.h  RTTrPMTest.h
tests/include/modules/: Modules.h
tests/include/modules/centroid/: CentroidPosAccVelTest.h  CentroidPosTest.h
tests/include/modules/orientation/: OrientationEulerTest.h  OrientationQuaternionTest.h
tests/include/modules/trackedpoint/: TrackedPointPosAccVelTest.h  TrackedPointPosTest.h
tests/include/modules/zone/: ZoneCollisionTest.h
tests/include/trackables/: TrackableDefaultTest.h  Trackables.h
